--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ group 'com.demo'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-apply plugin: 'war'
+apply plugin : 'maven'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
@@ -12,7 +14,8 @@ repositories {
 
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '+'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '+'
+    testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
+    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     testCompile group: 'org.springframework.boot',name: 'spring-boot-starter-test',version: '+'
 }
