--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,3 +12,8 @@ phases:
 artifacts:
   files:
     - 'target/spring-cloud-inegration-0.0.1-SNAPSHOT.jar'
+  #discard-paths: yes
+  #files:
+  #  - target/*
+  #  - scripts/*
+  #  - appspec.yml
