--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
     commands:
       - echo Build started on `date`
       - mvn test
+      #- ./gradlew clean build
   post_build:
     commands:
       - echo Build Completed on `date`
@@ -14,6 +15,7 @@ artifacts:
     #- 'target/spring-cloud-inegration-0.0.1-SNAPSHOT.jar'
   discard-paths: yes
   files:
-    - target/*
-    - scripts/*
+    - target/spring-cloud-inegration-0.0.1-SNAPSHOT.jar
+    - scripts/start.sh
+    - scripts/stop.sh
     - appspec.yml
