--- a/appspec.yml
+++ b/appspec.yml
@@ -13,10 +13,10 @@ files:
 
 hooks:
   ApplicationStop:
-      - location: stop-process.sh
+      - location: scripts/stop.sh
         timeout: 180
         runas: root
     ApplicationStart:
-      - location: start-process.sh
+      - location: scripts/start.sh
         timeout: 180
         runas: root
