--- a/appspec.yml
+++ b/appspec.yml
@@ -15,8 +15,8 @@ hooks:
   ApplicationStop:
       - location: scripts/stop.sh
         timeout: 180
-        runas: root
+        runas: ec2-user
   ApplicationStart:
       - location: scripts/start.sh
         timeout: 180
-        runas: root
+        runas: ec2-user
