--- a/appspec.yml
+++ b/appspec.yml
@@ -13,10 +13,10 @@ files:
 
 hooks:
   ApplicationStop:
-      - location: stop.sh
+      - location: /stop.sh
         timeout: 180
         runas: ec2-user
   ApplicationStart:
-      - location: start.sh
+      - location: /start.sh
         timeout: 180
         runas: ec2-user
